# ReCircula

./: .env.example  .gitignore  LICENSE  docker-compose.override.yml  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_token_verificacao.py  0003_token_verificacao_hash.py  0004_refresh_token_version.py  0005_password_reset_fields.py  0006_tipo_anuncio_ambos.py  0007_images_table.py  0008_trgm_indexes.py  0009_add_geo_coordinates.py  0009_chat_tables.py  0010_admin_decisions_log.py  20260607_d0d64199b086_alter_fk_decisoes_anuncio_id.py
backend/app/: asgi.py  config.py  database.py  deps.py  main.py
backend/app/chat/: events.py  presence.py  socketio_server.py
backend/app/core/: security.py
backend/app/models/: __init__.py  anuncio.py  categoria.py  chat.py  decisao_administrativa.py  denuncia.py  material.py  mensagem.py  ponto_coleta.py  usuario.py
backend/app/routers/: __init__.py  admin.py  anuncios.py  auth.py  categorias.py  chat.py  denuncias.py  materiais.py  mensagens.py  pontos_coleta.py  usuarios.py
backend/app/schemas/: admin.py  anuncio.py  categoria.py  chat.py  denuncia.py  mensagem.py  usuario.py
backend/app/services/: email.py  geocode.py  moderacao.py  uploads.py
backend/tests/: conftest.py  test_admin_moderacao.py  test_anuncios_geo.py  test_auth.py  test_chat.py  test_denuncias.py  test_usuarios.py
docs/: PLANEJAMENTO-SPRINTS.md
frontend/: .env.example  .gitignore  (+6 more)
(+39 files in other folders)
